@@ -1,5 +1,9 @@
 2011-11-16  Juanma Barranquero  <lekktu@gmail.com>
 
+	* gnus-sum.el (gnus-summary-make-menu-bar):
+	* gnus-uu.el (gnus-uu-decode-postscript)
+	(gnus-uu-decode-postscript-and-save):
+	* mailcap.el (mailcap-print-command):
 	* registry.el (registry-lookup, registry-lookup-breaks-before-lexbind):
 	Fix typos.
 
@@ -20058,7 +20062,7 @@
 	* mail-source.el (mail-source-delete-crash-box): Refactor.
 	(mail-source-fetch): Use it.
 	(mail-source-fetch-file): Ditto.
-	(mail-source-fetch-directory): Run postscript in loop.
+	(mail-source-fetch-directory): Run PostScript in loop.
 	(mail-source-fetch-pop): Delete.
 	(mail-source-fetch-maildir): Ditto.
 	(mail-source-fetch-imap): Ditto.
